--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'OCR-B';
+  src: url('/OCR-b__.ttf');
+}
+
 body{
     background:#ddd;
     text-align: center;
@@ -154,4 +159,12 @@ html{
 
 .barcode-select{
   border-color: #ccc;
+}
+
+.btn-download{
+  cursor: pointer;
+  background: #808080;
+  color: white;
+  margin: 2rem;
+  padding: 1rem;
 }
