--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
-@font-face {
+/* @font-face {
   font-family: 'OCR-B';
-  src: url('/OCR-b__.ttf');
-}
+  src: url('./OCR-b__.ttf');
+} */
 
 body{
     background:#ddd;
